--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,7 +15,9 @@
     "axios": "^1.7.9",
     "next": "^15.1.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-quill": "^2.0.0",
+    "react-quill-new": "^3.3.3"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^15.1.6",
